--- a/src/styles/cv.css
+++ b/src/styles/cv.css
@@ -1,7 +1,7 @@
 .cv-main-div{
-    background: linear-gradient(140deg, #2C3E50, #000000);
-    height: 100vh;
-    height: auto;
+    background-image: url(../images/cosmiedit1.jpg);
+    background-size: cover;
+    height: fit-content;
     display: flex;
     justify-content: center;
 }
@@ -9,7 +9,7 @@
 .cv-section-continer{
     height: 100vh;
     width: 75vw;
-    background-color: #2C3E50;
+    /* background-color: rgba(251, 251, 251, 0.449); */
     display: flex;
 }
 
@@ -23,6 +23,11 @@
     text-align: center;
     padding: 0 13px;
     justify-content: flex-end;
+    background-color: rgba(251, 251, 251, 0.449);
+    box-shadow: 0 0 10px black;
+    border-right: 1px dashed aquamarine;
+    border-left: 1px dashed aquamarine;
+
 }
 
 .exp-h3{
@@ -32,6 +37,11 @@
     padding: 6px 0;
     width: 100%;
     text-align: center;
+    background-image: url(../images/cosmiedit.jpg);
+    background-size: 200%;
+    background-position: top;
+    color: aquamarine;
+    box-shadow: 0 0 10px black;
    
 }
 
@@ -47,9 +57,9 @@
 }
 
 .exp-company-span{
-    font-weight: bold;
+    font-weight: lighter;
     font-size: large;
-    color: rgb(114, 156, 199);
+    color: rgb(10, 10, 10);
 }
 
 .exp-content-container p{
@@ -57,18 +67,28 @@
     color: aliceblue;
 }
 
+.cv-title-spn{
+    font-weight: bold;
+}
 
+.cv-city-spn{
+    font-weight: bold;
+    color: rgb(43, 86, 226);
+}
 
 .cv-edu-section{
     width: 33.5%;
     height: 100vh;
-    background-color:darkred;
+    background-color: rgba(251, 251, 251, 0.449);
     padding: 0 13px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: flex-end;
+    box-shadow: 0 0 10px black;
+    border-right: 1px dashed aquamarine;
+    border-left: 1px dashed aquamarine;
 }
 
 
@@ -99,21 +119,37 @@
 /* Cv Personal content/center section 🔽*/
 .cv-personal-content{
     width: 33.5%;
-    height: fit-content;
-    background-color: aquamarine;
+    height: 100%;
+    background-color: transparent;
     display: flex;
-    justify-content: center;
-    padding-top: 40px;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+}
+
+.user-cv-img{
+    width: 110px;
+    height: 110px;
+    border-radius: 55px;
+    position: absolute;
+    top: 0%;
+    left: 46.5%;
+    border: 1px dashed aquamarine;
 }
 
 .cv-personal-content-main-div{
     text-align: center;
-    background-color: blueviolet;
+    background-color: rgba(251, 251, 251, 0.449);
     padding: 0 15px;
     width: 70%;
-    height: 100vh;
+    height: 100%;
     border-top-right-radius: 50px;
     border-top-left-radius: 50px;
+    margin-top: 20px;
+    padding-top: 90px;
+    box-shadow: 0 0 10px black;
+    border: 1px dashed aquamarine;
+    border-bottom: none;
 }
 
 .cv-personal-info{
@@ -132,6 +168,30 @@
 
 .cv-name-title-container p{
     margin: 0;
+}
+
+.cv-personal-data{
+   padding-top: 15px;
+   padding-bottom: 15px;
+}
+
+.social-media-pages{
+    /* padding-top: 15px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* border-top: 1px dashed white; */
+}
+
+.media-icon-contianer{
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    margin: 10px;
+}
+
+.media-icon{
+    font-size: 25px;
 }
 
 .personal-desc-p{
@@ -158,4 +218,25 @@
     margin:0;
     font-size: small;
 
+}
+
+.cv-err-msg{
+    margin: auto;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(153, 153, 153, 0.564);
+    width: 20%;
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+    border-radius: 10px;
+    border: 0.5px solid red;
+}
+
+.cv-err-icon{
+    font-size: 22px;
+    color: red;
+    filter: drop-shadow(0px 0px 2px red);
 }
