--- a/src/styles/employeePro.css
+++ b/src/styles/employeePro.css
@@ -1,12 +1,13 @@
 .empe-profile-main-div{
-    height: 100vh;
-    width: 100vw;
+    height: 92vh;
+    width: 100%;
+    overflow-x: hidden !important;
 }
 
 .empe-content-div{
     background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
     height: 92vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,12 +48,14 @@
     width: 140px;
     height: 140px;
     border-radius: 70px;
+    margin-bottom: 35px;
 }
 
 .username-span{
     color: #8cb5ea;
     font-weight: lighter;
     font-size: small;
+    margin-top: 10px !important;
 }
 
 
@@ -87,7 +90,7 @@
     margin-top: -20px;
     font-family:monospace;
     background-color: rgba(255, 255, 255, 0.103);
-    width: 80px;
+    width: auto;
     border-radius: 3px;
     box-shadow: 1px 1px 4px black;
     border: 0.2px solid rgb(0, 251, 255);
