--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -2,11 +2,11 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
-    height: 100vh;
+    height: auto;
     /* background-image:linear-gradient(-20deg, #00cdac 0%, #8ddad5 100%); */
     background-image: linear-gradient( 171.8deg,  rgba(5,111,146,1) 13.5%, rgba(6,57,84,1) 78.6% );
 }
+
 
 
 .offers-main-div{
