--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -6,7 +6,7 @@
     background-color: blue;
     width: 100%;
     height: 100vh;
-    background-image: url(../images/up.jpg);
+    background-image: url(../images/Untitled.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -75,7 +75,7 @@
 
 .see-icon{
     position: absolute;
-    left:59%;
+    left:65%;
     top: 49.5%;
     cursor: pointer;
     color: black;
