--- a/src/styles/popupTwo.css
+++ b/src/styles/popupTwo.css
@@ -5,8 +5,9 @@
 
 .desc-span{
     margin: auto;
-  
-    font-weight: bold;
+    font-weight: lighter;
+    color: aquamarine;
+    filter: drop-shadow(1px -1px 1px black);
 }
 
 .desc-input-div{
@@ -16,6 +17,10 @@
    height: 45vh;
 }
 
+.desc-p{
+    display: flex;
+
+}
 
 
 .desc-input{
@@ -59,13 +64,35 @@
 
 .images-container{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    text-align: center;
+}
+
+.images-text-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.img-txt-span{
+    font-size: large;
+    color: aquamarine;
+    filter: drop-shadow(1px 1px 1px black);
+}
+
+.img-txt-span2{
+    font-size: 13px;
+    font-weight: lighter;
+    color: navy;
+    text-align: left;
+    display: flex;
 }
 
 .img-names-div{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
     margin-top: 35px;
+    width: 100%;
 }
 
 .img-name-span{
@@ -95,4 +122,21 @@
 .issue-image{
     width: 60px;
     height: 60px;
+}
+
+.upld-btn{
+    /* box-shadow: inset 0 0 15px black; */
+    background-color: rgb(70, 70, 158);
+}
+
+.chevRight-icon{
+    margin: 3px;
+    color:deepskyblue;
+}
+
+.downChev-icon{
+    margin-top: 5px;
+    margin-left: 3px;
+    color: aquamarine;
+    filter: drop-shadow(1px 5px 1px black);
 }
