--- a/src/styles/proNVu.css
+++ b/src/styles/proNVu.css
@@ -1,5 +1,6 @@
 .proNVu-main-div{
-    background-image: linear-gradient(-225deg, #FFFEFF 0%, #D7FFFE 100%);
+    /* background: linear-gradient(to right, #02aab0, #00cdac); */
+    background: linear-gradient(to right, #c04848, #480048);
     width: 100%;
     height: 100vh;
     align-items: center;
