--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,11 +1,32 @@
 
 .pro-main-div{
     width: 100%;
-    height: 100vh;
+    height: 116vh;
     padding: 0;
-    /* background-color: blueviolet; */
     background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
 
+}
+
+@media(width <= 414px){
+    .pro-main-div{
+        width: 100%;
+        height: 100%;
+        /* padding-right: 20px; */
+        overflow-x: hidden !important;
+    }
+    .pro-nav{
+        width: 100vw !important;
+    }
+    .stng-icon{
+        margin-top: -8px !important;
+    }
+    .icn-span{
+        font-size: 10px;
+    }
+    .pro-icons{
+        width: 25px !important;
+        height: 25px !important;
+    }
 }
 
 .pro-nav{
@@ -47,7 +68,6 @@
 .pro-options{
     display: flex;
     margin-bottom: 10px;
-    /* background-image: linear-gradient(to top, #09203f 0%, #537895 100%); */
     width: 70%;
     text-align: center;
     align-items: center;
@@ -204,6 +224,73 @@
     top: 14.5%;
     cursor: pointer;
 }
+.bgChanger-container{
+    position: absolute;
+    left: 80%;
+    display: flex;
+    flex-direction: column;
+    /* background-color: #09203f !important; */
+    height: auto;
+}
+
+.bgChanger{
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    margin: 2px;
+    border: 0.5px solid black;
+    border-radius: 18px;
+}
+
+.background{
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+}
+
+.bg1{
+    background-color: #85FFBD;
+        background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+}
+
+.bg2{
+     background-color: #8EC5FC;
+        background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+}
+
+.bg3{
+        background-color: #08AEEA;
+        background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
+}
+
+.bg4{
+    background-color: #21D4FD;
+        background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%)
+}
+
+.bg5{
+    background-color: #3EECAC;
+        background-image: linear-gradient(19deg, #3EECAC 0%, #EE74E1 100%);
+}
+
+.bg6{
+    background-color: #3EECAC;
+    background-image: linear-gradient(19deg, #3EECAC 0%, #EE74E1 100%);
+}
+
+.bg7{
+    background-color: #FF9A8B;
+    background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+}
+
+.bg8{
+    background-color: #74EBD5;
+        background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+}
+
+.bg9{
+    background-color: #FAACA8;
+        background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+}
 
 
 
@@ -211,7 +298,7 @@
 
 .offer-popUp1{
     width: 35%;
-    background-color: aquamarine;
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
     height: auto;
     position: absolute;
     left: 33%;
@@ -219,17 +306,46 @@
     border: none;
     border-radius: 15px;
     box-shadow: 3px 3px 19px 2px black;
+    padding: 0;
+    border: 0.5px solid aquamarine;
   
 }
 
 .form-main-div{
-    margin:0 40px;
-    padding: 25px 0;
-    margin-top: -25px;
+    background-color: rgba(251, 251, 251, 0.449);
+    padding: 25px 25px;
+    box-shadow: inset 0 0 5px black;
+    border-radius: 15px;
+
 }
+
+.offer-form-head{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-right: 80px;
+    margin-top: -10px;
+}
+
+.fill-info-span{
+    font-size: 10px;
+    /* font-weight: lighter; */
+    color: #63bff5;
+}
+
+.form-head-span{
+    font-size: 18px;
+    color: rgb(90, 246, 194);
+    filter: drop-shadow(1px -1px 1px black);
+}
+
 .offer-popUp1 input{
     height: 4vh;
+    border: 0.5px solid aquamarine;
+    border-radius: 3px;
+    box-shadow: inset 0 0 5px grey;
 }
+
 
 .dropDown{
     position: relative;
@@ -284,6 +400,28 @@
 .desperator-div span{
     margin: 0 15px;
 }
+
+.info-box{
+    background-color: aquamarine;
+    height: 75% !important;
+    margin-top: 5px;
+    border-radius: 5px;
+    border: 1px solid #98c1d9;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    width: 250px !important;
+}
+
+.info-box p{
+    font-size: 12px;
+    color:#537895;
+    filter: drop-shadow(1px 1px 3px #537895);
+}
+
+
 .vertical-line{
     width: 180px;
     height: 1px;
@@ -347,14 +485,13 @@
 
 .hours-div{
     position: absolute;
-    left: 92.2%;
-    top: 10%;
+    left: 96.2%;
+    top: 9%;
     display: flex;
     flex-direction: column;
-    background-color: red;
     height: 43.1vh;
     padding-top: 110px;
-    width: 39.2px;
+    width: 15px;
     text-align: center;
     /* justify-content: center; */
     align-items: center;
@@ -362,12 +499,20 @@
 }
 
 .hour-span{
-    background-color: antiquewhite;
+    background-color: transparent;
     margin: 1px;
     width: 22px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 13px;
     cursor: pointer;
+    box-shadow: inset 0 0 3px black;
+    color: aquamarine;
+    border: 0.3px solid aquamarine;
+}
+
+.hours-close{
+    color: red;
+    margin-top: 3px;
 }
 
 .hours-btn{
@@ -376,7 +521,7 @@
 
 .payment-options{
     position: absolute;
-    top: 71.3%;
+    top: 69.5%;
     display: flex;
     justify-content: space-between;
     font-size: 12px;   
