--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -40,6 +40,7 @@
     font-weight: lighter;
     font-size: large;
     color: white;
+    filter: drop-shadow(1px 1px 1px black);
 }
 
 .form-head span {
@@ -72,6 +73,11 @@
     border: none;
     box-shadow: inset 0 0 3px rgb(163, 238, 213);
     border: 0.5px solid grey;
+}
+
+.global-input:focus{
+    outline: none;
+    transform: scale(0.9);
 }
 
 .form-names {
@@ -239,6 +245,9 @@
     color: red;
     font-size: 10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 0;
+    margin: 0;
+    text-align: center;
 }
 
 .design-div {
@@ -262,5 +271,26 @@
 .sup-submit-button:hover {
     background-position: left;
     transition: 3s;
+}
+
+.email-input-div{
+    display: flex !important;
+}
+
+.mdError-icon{
+    /* background-color: rgba(118, 32, 32, 0.408); */
+    font-size: large;
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: inset 0 0 6px red;
+    color: red;
+    border: 1px solid red;
+}
+
+.mdError-icon2{
+    font-size: large;
+    background-color: rgb(57, 246, 149);
+    border-radius: 12px;
+    border: 0.5px solid black;
 }
 
