--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -23,10 +23,6 @@
     .icn-span{
         font-size: 10px;
     }
-    .pro-icons{
-        width: 25px !important;
-        height: 25px !important;
-    }
 }
 
 .pro-nav{
@@ -119,7 +115,8 @@
 
 .pro-icons{
     padding: 18px;
-    font-size: 20px;
+    width: 20px;
+    height: 20px;
 
 }
 
