--- a/src/styles/employeePro.css
+++ b/src/styles/employeePro.css
@@ -13,9 +13,47 @@
     align-items: center;
 }
 
+.resp-div-1{display: flex;}
+
+@media(width<=1000px){
+    .content-div{
+        width: 150px !important;
+        height: 300px !important;
+    }
+    .empe-content-div{
+        display: flex;
+        flex-direction: column;
+    }
+    .resp-div-1{
+        display: flex;
+    }
+    .empe-profile-main-div{
+     height: auto !important;   
+    }
+    .glass-container{
+        display: none;
+    }
+}
+
+
+@media(width<=500px){
+    .content-div{
+        background-color: transparent !important;
+        color: #2c5364 !important;
+        
+    }
+    .resp-div-1{
+        display: flex;
+        flex-direction: column;
+    }
+    .empe-content-div{
+        height: auto !important;
+    }
+}
+
 .content-div{
     width: 250px;
-    background: rgba(255, 255, 255, 0.103);
+    /* background: rgba(255, 255, 255, 0.103); */
     height: 70vh;
     /* border: 1px solid rebeccapurple; */
     margin: 2px ;
@@ -29,7 +67,7 @@
     display: flex;
     justify-content: center;
     /* background: linear-gradient(to right, #c04848, #480048) !important; */
-    background: linear-gradient(to right, #0f2027, #203a43, #2c5364) !important;
+    background: linear-gradient(to right, #0f2027, #203a43, #2c5364) ;
     
 }
 
@@ -66,8 +104,11 @@
     flex-direction: column;
     align-items: center;
     color: #8cb5ea;
+    /* background-image: radial-gradient( circle farthest-corner at -24% 77.4%,  rgb(0, 187, 255) 0%, rgb(0, 187, 255) 15.9%, rgb(0, 187, 255) 15.9%, rgb(0, 187, 255) 24.4%,  rgba(0,152,155,1) 0.1%, rgba(0,94,120,1) 94.2% ); */
+}
+
+.cc-v{
     background-image: radial-gradient( circle farthest-corner at -24% 77.4%,  rgb(0, 187, 255) 0%, rgb(0, 187, 255) 15.9%, rgb(0, 187, 255) 15.9%, rgb(0, 187, 255) 24.4%,  rgba(0,152,155,1) 0.1%, rgba(0,94,120,1) 94.2% );
-    /* border: 0.5px solid rgb(0, 251, 255); */
 }
 
 .empe-cv div{
@@ -99,19 +140,12 @@
 }
 
 .cv-icon{
-
-    /* border-top: 60px solid rgba(255, 255, 255, 0.103);
-    border-bottom: 70px solid rgba(255, 255, 255, 0.103);
-    border-left: 55px solid rgba(255, 255, 255, 0.103);
-    border-right: 55px solid rgba(255, 255, 255, 0.103); */
     box-shadow: 2px 2px 5px black;
     border-radius: 190px;
-    /* padding: 50px; */
     width: 40px;
     height: 110px;
     padding-right: 35px;
     padding-left: 35px;
-    /* border: 0.5px solid rgb(0, 251, 255); */
     border: 0.3px solid rgb(0, 187, 255) ;
     color: rgb(0, 251, 255);
     margin-bottom: 40px;
@@ -146,18 +180,12 @@
 
 /* glass div */
 .glass-div{
-    /* background-color: rgba(255, 255, 255, 0.103); */
     background-color: rgb(0, 187, 255);
     width: 15px;
     height: 15px;
-
     position: absolute;
-    left: 22.5%;
+    left: 25%;
     top: 61%;
-    /* border-radius: 25px !important; */
-    /* border-bottom-right-radius: 20px; */
-    /* border: 0.2px solid blue; */
-    /* box-shadow: 2px 2px 10px black; */
 }
 
 .glass-2{
