--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -3,6 +3,8 @@
     display: flex;
     justify-content: center;
     height: auto;
+    max-height: 100%;
+    max-width: 100%;
     /* background-image:linear-gradient(-20deg, #00cdac 0%, #8ddad5 100%); */
     background-image: linear-gradient( 171.8deg,  rgba(5,111,146,1) 13.5%, rgba(6,57,84,1) 78.6% );
 }
@@ -13,16 +15,16 @@
         flex-direction: column;
         justify-content: flex-start;
         height: auto !important;
-       
     }
     .offer-desc-page{
         width: 350px !important;
         height: 550px !important;
         position: relative !important;
-        margin-left: -50px;
+        margin-left: -50px !important;
     }
     .offer-page{
         height: 100% !important;
+        /* width: 75% !important; */
     }
     .description-container{
         height: 220px;
@@ -42,13 +44,15 @@
         justify-content: center;
         align-items: center;
         height: 300px !important;
-        overflow-y: auto;
+        overflow-y: auto !important;
         width: 450px !important;
-        padding-top: 100px;
+        padding-top: 100px !important;
+        padding-left: 80px;
+        padding-right: 0;
     }
     .offer-card{
         width: 300px !important;
-       margin-left: 115px !important;
+       margin-left: 45px !important;
     }
     .pro-nav{
         width: 100% !important;
@@ -63,11 +67,25 @@
     }
 }
 
+@media(width<=900px){
+    .offer-desc-page{
+        width: 350px ;
+        height: 550px !important;
+    }
+    .offer-page{
+        height: 90% ;
+        
+    }
+}
+
+
 .offer-images-iss{
     max-width: 90%;
     height: auto;
     margin-left: 30px;
 }
+
+
 
 
 .offers-main-div{
