--- a/src/styles/employeePro.css
+++ b/src/styles/employeePro.css
@@ -229,3 +229,44 @@ top: 77%;
     position: absolute;
     top: 73%;
 }
+
+.profession-sm-input{
+    font-size: 12px !important;
+    background-color: transparent !important;
+    margin: 0 !important;
+}
+
+.profession-div{
+    display: flex !important;
+    flex-direction: column !important;
+    width: fit-content;
+    height: auto !important;
+    background-color: transparent !important;
+    margin-top: 5px;
+}
+
+.profession-input{
+    border-radius: 10px;
+    border: none;
+    margin: 3px;
+    background-color: #09203f;
+    color: white;
+    border: 0.5px solid rgb(0, 251, 255);
+    text-align: center;
+}
+
+.profession-span{
+    margin-top: 10px !important;
+    border: none !important;   
+}
+
+.profession-button{
+    border: 0.5px solid rgb(0, 251, 255);
+    color: rgb(0, 251, 255);
+    background-color: #09203f;
+    border-radius: 3px;
+}
+
+.profession-button:hover{
+    transform: scale(1.1);
+}
