--- a/src/styles/ntfnOffer.css
+++ b/src/styles/ntfnOffer.css
@@ -9,7 +9,9 @@
 }
 
 .ntfn-offer-window{
-    margin-top: -30px !important;
+    /* margin-top: -30px !important; */
+    position: relative;
+    width: 667px;
 }
 
 .candidates-div{
@@ -86,4 +88,25 @@
 .accept-candidate-icon{
     color: rgb(71, 221, 69);
     font-size: 17px;
+}
+
+.hired-icon{
+    /* width: 100% ;
+    height: 300px !important;
+    border-radius: 50px;
+    background-color:rgb(71, 221, 69);
+    color: aquamarine; */
+}
+
+.hire-container{
+    width: 100px ;
+    height: 100px !important;
+    border-radius: 50px;
+    background-color:rgb(71, 221, 69);
+    color: aquamarine;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
 }
