--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -6,7 +6,7 @@
     background-color: blue;
     width: 100%;
     height: 100vh;
-    background-image: url(../images/Untitled.jpg);
+    background-image: url(../images/lk3.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
