--- a/src/styles/proNVu.css
+++ b/src/styles/proNVu.css
@@ -1,23 +1,49 @@
 .proNVu-main-div{
     /* background: linear-gradient(to right, #02aab0, #00cdac); */
-    background: linear-gradient(to right, #c04848, #480048);
+    /* background: linear-gradient(to right, #c04848, #480048); */
+    /* background: linear-gradient(to right, #e0eafc, #cfdef3); */
+    /* background: linear-gradient(to right, #b3ffab, #12fff7); */
+    /* background: linear-gradient(to right, #005c97, #363795); */
+    /* background: linear-gradient(to right, #2c3e50, #3498db); */
+    /* background: linear-gradient(to right, #56ccf2, #2f80ed); */
+    background: linear-gradient(to right, #000000, #434343);
     width: 100%;
     height: 100vh;
     align-items: center;
     text-align: center;
+    padding-top: 90px;
+}
+
+.pnvu-main-child{
+    display: flex;
+    justify-content: center;
 }
 
 .img-msg-div{
     display: flex;
     justify-content: center;
-    padding-left: 85px;
+    padding-left: 30px;
+    
+}
+
+@keyframes borderAnimation {
+    0%{border-left:1px solid #36d1dc}
+    37%{border-top:1px solid #36d1dc;}
+    67%{border-right:1px solid #36d1dc;}
+    100%{border-bottom:1px solid #36d1dc;}
+}
+.pnvu-pro-img{
+    border: 0.5px solid violet;
+    /* filter: drop-shadow(1px 1px 10px violet); */
+    box-shadow: 3px #1d1160 2px #1d1160 1px #1d1160;
+    animation: borderAnimation 5s infinite alternate;
+    
 }
 
 .addMsg-div{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-
 }
 
 .addMsg-icon-div{
@@ -27,7 +53,6 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-
     border-radius: 35px;
     font-size: 24px;
     color: aquamarine;
@@ -166,4 +191,22 @@
 .sender-msgs{
     display: flex;
     text-align: right;
+}
+
+.circle-bg{
+    background: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+    height: 500px;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40%;
+    /* border: 0.5px solid aquamarine; */
+    box-shadow: inset 0px 0px 9px black;
+    
+}
+
+.circle-bg:hover{
+    background-color: #6a81b1;
+    background-size: 10%;
 }
