--- a/src/styles/employeePro.css
+++ b/src/styles/employeePro.css
@@ -127,16 +127,22 @@
 
 .empe-cv div>span{
     font-size: 20px;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin-top: -20px;
-    font-family:monospace;
-    background-color: rgba(255, 255, 255, 0.103);
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* background-color: rgb(68, 86, 87); */
     width: auto;
-    border-radius: 3px;
-    box-shadow: 1px 1px 4px black;
-    border: 0.2px solid rgb(0, 251, 255);
-    background-color: black;
-    color: rgb(0, 251, 255);
+    border-radius: 21px;
+    box-shadow:inset 0px 0px 3px black;
+    /* border: 0.2px solid rgb(0, 251, 255); */
+    background-image: url(../images/cosmiedit1.jpg);
+    background-size: 200%;
+    background-position: top;
+    color: aquamarine;
+    height: 25px;
+    padding: 1px 7px;
+    text-align: center;
+    align-items: center;
 }
 
 .cv-icon{
@@ -269,4 +275,12 @@ top: 77%;
 
 .profession-button:hover{
     transform: scale(1.1);
+}
+
+
+.empee-prfl-pInfo{
+    background-color: transparent;
+    width: 100%;
+    height: fit-content !important;
+   margin-bottom: -20px !important;
 }
